--- a/documentation/demos/menu/menu.html
+++ b/documentation/demos/menu/menu.html
@@ -31,6 +31,8 @@
     <li><a href="../demo17/video.html">Video Tag</a></li>
     <li><a href="../demo18/keys_org.html">Keyboard management</a></li>
     <li><a href="../demo19/collision.html">Collision detection</a></li>
+    <li><a href="../demo20/flightcontrol.html">Flight control</a></li>
+    <li><a href="../demo21/vvv.html">Tiles engine</a></li>
 </ul>
        
 <h1>Tutorial</h1>
