--- a/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_CAAT.js.html
+++ b/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_CAAT.js.html
@@ -31,4 +31,23 @@
 <span class='line'> 24</span> </span><span class="WHIT">                </span><span class="NAME">args.concat</span><span class="PUNC">(</span><span class="NAME">Array.prototype.slice.call</span><span class="PUNC">(</span><span class="NAME">arguments</span><span class="PUNC">)</span><span class="PUNC">)</span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'> 25</span> </span><span class="WHIT">    </span><span class="PUNC">}</span><span class="WHIT">
 <span class='line'> 26</span> </span><span class="PUNC">}</span><span class="PUNC">;</span><span class="WHIT">
-<span class='line'> 27</span> </span></pre></body></html>
+<span class='line'> 27</span> 
+<span class='line'> 28</span> </span><span class="COMM">/*
+<span class='line'> 29</span> Array.prototype.forEach = Array.prototype.forEach || function (fun) {
+<span class='line'> 30</span>     var i;
+<span class='line'> 31</span>     var len= this.length;
+<span class='line'> 32</span> 
+<span class='line'> 33</span>     if (typeof fun!=="function") {
+<span class='line'> 34</span>         throw new TypeError();
+<span class='line'> 35</span>     }
+<span class='line'> 36</span> 
+<span class='line'> 37</span>     var thisp = arguments[1];
+<span class='line'> 38</span>     for (i= 0; i&lt;len; i++) {
+<span class='line'> 39</span>         if (i in this) {
+<span class='line'> 40</span>             fun.call(thisp, this[i], i, this);
+<span class='line'> 41</span>         }
+<span class='line'> 42</span>     }
+<span class='line'> 43</span> };
+<span class='line'> 44</span>     */</span><span class="WHIT">
+<span class='line'> 45</span> 
+<span class='line'> 46</span> </span></pre></body></html>
