--- a/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_core_class.js.html
+++ b/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_core_class.js.html
@@ -227,4 +227,6 @@
 <span class='line'>220</span> 
 <span class='line'>221</span>             return -1;
 <span class='line'>222</span>         });
-<span class='line'>223</span>  **/</span></pre></body></html>
+<span class='line'>223</span>  **/</span><span class="WHIT">
+<span class='line'>224</span> 
+<span class='line'>225</span> </span></pre></body></html>
