All demos added.

--- a/documentation/demos/demo12+1/transitions_org.html
+++ b/documentation/demos/demo12+1/transitions_org.html
@@ -181,6 +181,7 @@
                 var i,j,ctx;
 
                 ctx= director.ctx;
+                ctx.beginPath();
                 
                 for( j=0.5; j<director.width; j+=20 ) {
                     ctx.moveTo( j, 0 );
