--- a/index.html
+++ b/index.html
@@ -63,16 +63,22 @@
             <a href="documentation/demos/demo3/sprites_org.html"><img class="image_h" src="thumbs/demo3.png" alt="Sprites traversing a random path"></a>
             <a href="documentation/demos/demo4/coordinates_org.html"><img class="image_h" src="thumbs/demo4.png" alt="Pixel perfect collistion detection with mouse"></a>
             <a href="documentation/demos/demo5/text-on-path_org.html"><img class="image_h" src="thumbs/demo5.png" alt="Sprites traversing a random path"></a>
-            <a href="documentation/demos/demo6/accelerometer_org.html"><img class="image_h" src="thumbs/demo6.png" alt="Sprites traversing a random path"></a>
-            <a href="documentation/demos/demo7/anchors_org.html"><img class="image_h" src="thumbs/demo7.png" alt="Sprites traversing a random path"></a>
-            <a href="documentation/demos/demo8/hierarchy_org.html"><img class="image_h" src="thumbs/demo8.png" alt="Sprites traversing a random path"></a>
-            <a href="documentation/demos/demo9/behaviors_org.html"><img class="image_h" src="thumbs/demo9.png" alt="Sprites traversing a random path"></a>
-            <a href="documentation/demos/demo10/garden_org.html"><img class="image_h" src="thumbs/demo10.png" alt="Sprites traversing a random path"></a>
-            <a href="documentation/demos/demo11/circles_org.html"><img class="image_h" src="thumbs/demo11.png" alt="Sprites traversing a random path"></a>
-            <a href="documentation/demos/demo12/box2d_org.html"><img class="image_h" src="thumbs/demo12.png" alt="Sprites traversing a random path"></a>
-            <a href="documentation/demos/demo12+1/transitions_org.html"><img class="image_h" src="thumbs/demo13.png" alt="Sprites traversing a random path"></a>
-            <a href="documentation/demos/demo14/timers_org.html"><img class="image_h" src="thumbs/demo14.png" alt="Sprites traversing a random path"></a>
-            <a href="documentation/demos/demo15/logofrenzy_org.html"><img class="image_h" src="thumbs/demo15.png" alt="Sprites traversing a random path"></a>
+            <a href="documentation/demos/demo6/accelerometer_org.html"><img class="image_h" src="thumbs/demo6.png" alt="accelerometer input"></a>
+            <a href="documentation/demos/demo7/anchors_org.html"><img class="image_h" src="thumbs/demo7.png" alt="Actor anchors"></a>
+            <a href="documentation/demos/demo8/hierarchy_org.html"><img class="image_h" src="thumbs/demo8.png" alt="Hierarchical rotations"></a>
+            <a href="documentation/demos/demo9/behaviors_org.html"><img class="image_h" src="thumbs/demo9.png" alt="Some actor behaviors"></a>
+            <a href="documentation/demos/demo10/garden_org.html"><img class="image_h" src="thumbs/demo10.png" alt="Procedural grass"></a>
+            <a href="documentation/demos/demo11/circles_org.html"><img class="image_h" src="thumbs/demo11.png" alt="Circles collision"></a>
+            <a href="documentation/demos/demo12/box2d_org.html"><img class="image_h" src="thumbs/demo12.png" alt="Box2D integration"></a>
+            <a href="documentation/demos/demo12+1/transitions_org.html"><img class="image_h" src="thumbs/demo13.png" alt="Scene transitions"></a>
+            <a href="documentation/demos/demo14/timers_org.html"><img class="image_h" src="thumbs/demo14.png" alt="Scene timers"></a>
+            <a href="documentation/demos/demo15/logofrenzy_org.html"><img class="image_h" src="thumbs/demo15.png" alt="SpriteImage demo"></a>
+            <a href="documentation/demos/demo16/mask_org.html"><img class="image_h" src="thumbs/demo16.png" alt="Masking"></a>
+            <a href="documentation/demos/demo17/video_org.html"><img class="image_h" src="thumbs/demo17.png" alt="Video playback and manipullation"></a>
+            <a href="documentation/demos/demo18/keys_org.html"><img class="image_h" src="thumbs/demo18.png" alt="Keyboard demo"></a>
+            <a href="documentation/demos/demo19/collision.html"><img class="image_h" src="thumbs/demo19.png" alt="Quadtree based collision"></a>
+            <a href="documentation/demos/demo20/flightcontrol_org.html"><img class="image_h" src="thumbs/demo20.png" alt="Flightcontrol like demo"></a>
+            <a href="documentation/demos/demo21/vvv.html"><img class="image_h" src="thumbs/demo21.png" alt="TileMap engine preview"></a>
         </div>
 
         <h4>Featured</h4>
