All demos added.

--- a/index.html
+++ b/index.html
@@ -77,11 +77,13 @@
             <a href="documentation/demos/demo17/video_org.html"><img class="image_h" src="thumbs/demo17.png" alt="Video playback and manipullation"></a>
             <a href="documentation/demos/demo18/keys_org.html"><img class="image_h" src="thumbs/demo18.png" alt="Keyboard demo"></a>
             <a href="documentation/demos/demo19/collision.html"><img class="image_h" src="thumbs/demo19.png" alt="Quadtree based collision"></a>
-            <a href="documentation/demos/demo20/flightcontrol_org.html"><img class="image_h" src="thumbs/demo20.png" alt="Flightcontrol like demo"></a>
+            <a href="documentation/demos/demo20/flightcontrol.html"><img class="image_h" src="thumbs/demo20.png" alt="Flightcontrol like demo"></a>
             <a href="documentation/demos/demo21/vvv.html"><img class="image_h" src="thumbs/demo21.png" alt="TileMap engine preview"></a>
         </div>
 
-        <h4>Featured</h4>
+        <p></p>
+
+        <h4>Featured Games</h4>
         <div>
 
         </div>
