Added description on Demo20 - FlightControl

--- a/documentation/demos/demo20/flightcontrol.html
+++ b/documentation/demos/demo20/flightcontrol.html
@@ -47,7 +47,7 @@
                         Use the following controls:
                     </p>
                     <ul>
-                        <li>Cursor keys.</li>
+                        <li>Drag on any moving blue rectangle.</li>
                     </ul>
                 </div>
                 <div>
@@ -55,7 +55,8 @@
                         This demo features the following elements:
                     </p>
                     <ul>
-
+                        <li>Defining Catmull-Rom paths from drag gestures.</li>
+                        <li>Flattening and optimization of a path.</li>
                     </ul>
                 </div>
             </div>
