Some tutorials changes.

--- a/documentation/tutorials/t0.html
+++ b/documentation/tutorials/t0.html
@@ -114,12 +114,11 @@
                     <li><a href="t10.html">CAAT Helpers. Manipulate images, colors, preloaders, etc.</a></li>
                         <li class="indented"><a href="t10-1.html">Audio Manager</a>
                         <li class="indented"><a href="t10-2.html">Image utils</a>
+                        <li class="indented"><a href="t10-3.html">Sprite Image, or how to make your actors have background.</a>
 
                         <h3>Still under development</h3>
 
                         <li class="indented"><a href="#">Color utils</a>
-                        <li class="indented"><a href="#">CAAT.SpriteImage</a>
-                        <li class="indented"><a href="#">CAAT.CompoundImage</a>
                         <li class="indented"><a href="#">Image preloader</a>
                         <li class="indented"><a href="#">Local storage</a>
                         <li class="indented"><a href="#">Circle collision</a>
