--- a/documentation/demos/demo21/vvv.html
+++ b/documentation/demos/demo21/vvv.html
@@ -1,5 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
     <script src="../../track.js" type="text/javascript"></script>
@@ -127,7 +126,7 @@
                 var vw= this.vw;
                 var vh= this.vh;
 
-                // ajustar posiciones del viewport para que el player estŽ en camara.
+                // ajustar posiciones del viewport para que el player estï¿½ en camara.
                 var incX= 0;
                 if (x<this.triggerW || x> vw-this.triggerW) {
                     incX= x<vw/2 ? x-this.triggerW : x-(vw-this.triggerW);
