--- a/documentation/demos/menu/menu.html
+++ b/documentation/demos/menu/menu.html
@@ -33,6 +33,7 @@
     <li><a href="../demo19/collision.html">Collision detection</a></li>
     <li><a href="../demo20/flightcontrol.html">Flight control</a></li>
     <li><a href="../demo21/vvv.html">Tiles engine</a></li>
+    <li><a href="../demo22/multitouch.html">Multitouch</a></li>
 </ul>
        
 <h1>Tutorial</h1>
