Added multitouch support. Demo22.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             <a href="documentation/demos/demo19/collision.html"><img class="image_h" src="thumbs/demo19.png" alt="Quadtree based collision"></a>
             <a href="documentation/demos/demo20/flightcontrol.html"><img class="image_h" src="thumbs/demo20.png" alt="Flightcontrol like demo"></a>
             <a href="documentation/demos/demo21/vvv.html"><img class="image_h" src="thumbs/demo21.png" alt="TileMap engine preview"></a>
+            <a href="documentation/demos/demo22/multitouch.html"><img class="image_h" src="thumbs/demo22.png" alt="Multitouch test"></a>
         </div>
 
         <p></p>
