--- a/documentation/demos/index.html
+++ b/documentation/demos/index.html
@@ -32,6 +32,7 @@
     <li><a href="demo19/collision.html">Collision detection</a></li>
     <li><a href="demo20/flightcontrol.html">Flight Control</a></li>
     <li><a href="demo21/vvv.html">Tiles Engine</a></li>
+    <li><a href="demo22/multitouch.html">Multitouch</a></li>
 
 </ul>
 
