--- a/documentation/tutorials/t0.html
+++ b/documentation/tutorials/t0.html
@@ -27,9 +27,9 @@
             <h1>What is CAAT ?</h1>
             <p>
                 It is a<br>
-                <div style="width:180px; float:left;"><span class="important">JavaScript based</span></div>    (the toolkit is written in JavaScript)<br>
+                <div style="width:180px; float:left;"><span class="important">JavaScript based</span></div><br>
                 <div style="width:180px; float:left;"><span class="important">multi-instance</span></div>      (there can be more than one executing instance per html document)<br>
-                <div style="width:180px; float:left;"><span class="important">director-based</span></div>      (there exist a single entry-point which routes events and manages time)<br>
+                <div style="width:180px; float:left;"><span class="important">director-based</span></div><br>
                 <div style="width:180px; float:left;"><span class="important">scene-graph manager</span></div> (CAAT actors are entities which have state and may contain other actors).
             </p>
             <p>
@@ -38,25 +38,21 @@
             <p>
                 This name, is somehow obsolete. First of all, the rendering engine is not only focused on
                 <span class="important">Canvas</span>. <span class="important">WebGL</span> and
-                <span class="important">CSS</span> can be selected too. There's also a
-                <span class="important">native</span> implementation which executes CAAT seamlessly on
-                iOS and Android.
+                <span class="important">CSS</span> can be selected too.
             </p>
             <p>
                 CAAT it is a complete gaming framework, featuring on-screen entities, custom matrix
                 stack, game loop hooks, scenes, scene transition, affine transformations, pixel perfect
                 on-screen entity identification, complex paths, behaviors, seamless box2d integration,
-                etc.
-            </p>
-            <p>
-                This tutorial is divided in 10 chapters which describe the following CAAT features:
+                multitouch, etc.
             </p>
             <div id="menu-index">
                 <ul>
                     <li><a href="t1.html">Getting Started</a></li>
 
                     <li><a href="t2.html">CAAT.Actor internals. This is the base object.</a></li>
-                        <li class="indented"><a href="t2-1.html">Events</a></li>
+                        <li class="indented"><a href="t2-1.html">Mouse Events</a></li>
+                        <li class="indented">Touch Events</li>
                         <li class="indented"><a href="t2-2.html">Life cycle</a></li>
                         <li class="indented"><a href="t2-3.html">Transformations</a></li>
                         <li class="indented"><a href="t2-4.html">Behaviors</a></li>
@@ -69,6 +65,7 @@
                     <li><a href="t3.html">CAAT.ActorContainer. How to layer entities.</a></li>
                         <li class="indented"><a href="t3-1.html">Adding actors</a></li>
                         <li class="indented"><a href="t3-2.html">Z indexing</a></li>
+                        <li class="indented">Alpha</li>
 
                     <li><a href="t4.html">CAAT.Director. The system entry point.</a></li>
                         <li class="indented"><a href="t4-1.html">Time line hooks</a>
@@ -97,6 +94,8 @@
                         <li class="indented"><a href="t8-1.html">Linear Path</a>
                         <li class="indented"><a href="t8-2.html">Curve Path</a>
                         <li class="indented"><a href="t8-3.html">Complex Path</a>
+                        <li class="indented">Shape Path
+                        <li class="indented">Catmull-Rom
                         <li class="indented"><a href="t8-4.html">Traverse a Path</a>
                         <li class="indented"><a href="t8-5.html">Path as Interpolator</a>
 
@@ -104,9 +103,6 @@
                         <li class="indented"><a href="t9-1.html">ShapeActor</a>
                         <li class="indented"><a href="t9-2.html">StarActor</a>
                         <li class="indented"><a href="t9-3.html">TextActor</a>
-                        <li class="indented"><a href="t9-4.html">ImageActor (deprecated)</a>
-                        <li class="indented"><a href="t9-5.html">SpriteActor (deprecated)</a>
-                        <li class="indented"><a href="t9-6.html">Button (deprecated)</a>
                         <li class="indented"><a href="t9-7.html">InterpolatorActor</a>
                         <li class="indented"><a href="t9-8.html">PathActor</a>
                         <li class="indented"><a href="t9-9.html">Dock</a>
@@ -115,16 +111,25 @@
                         <li class="indented"><a href="t10-1.html">Audio Manager</a>
                         <li class="indented"><a href="t10-2.html">Image utils</a>
                         <li class="indented"><a href="t10-3.html">Sprite Image, or how to make your actors have background.</a>
+                        <li class="indented">Image Preloader
+                        <li class="indented">Color Utils
+                        <li class="indented">Local storage
+                        <li class="indented">Image processing
+                        <li class="indented">Texture packer
+                        <li class="indented">Debug info
+                        <li class="indented">Inspector
 
-                        <h3>Still under development</h3>
+                    <li>Other Input</li>
+                        <li class="indented">Keyboard
+                        <li class="indented">Accelerometer
 
-                        <li class="indented"><a href="#">Color utils</a>
-                        <li class="indented"><a href="#">Image preloader</a>
-                        <li class="indented"><a href="#">Local storage</a>
-                        <li class="indented"><a href="#">Circle collision</a>
-                        <li class="indented"><a href="#">Image processing</a>
-                        <li class="indented"><a href="#">Texture packer</a>
-                        <li class="indented"><a href="#">Layout</a>
+                    <li>Game Helpers</li>
+                        <li class="indented">Circle collision
+                        <li class="indented">Spatial Hash
+                        <li class="indented">Quadtree
+                        <li class="indented">Tiles Engine
+
+                    <li>CAAT tweaking variables</li>
 
                 </ul>
             </div>
