--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             </li>
             <li><a href="https://github.com/hyperandroid/CAAT">Fork On <strong>GitHub</strong></a></li>
         </ul>
+
+        <div>
+          <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="caatjs">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+        </div>
     </header>
 
 
