--- a/documentation/tutorials/t0.html
+++ b/documentation/tutorials/t0.html
@@ -52,7 +52,7 @@
 
                     <li><a href="t2.html">CAAT.Actor internals. This is the base object.</a></li>
                         <li class="indented"><a href="t2-1.html">Mouse Events</a></li>
-                        <li class="indented">Touch Events</li>
+                        <li class="indented"><a href="t2-10.html">Touch Events</a></li>
                         <li class="indented"><a href="t2-2.html">Life cycle</a></li>
                         <li class="indented"><a href="t2-3.html">Transformations</a></li>
                         <li class="indented"><a href="t2-4.html">Behaviors</a></li>
