--- a/documentation/tutorials/t4-6-p.html
+++ b/documentation/tutorials/t4-6-p.html
@@ -75,6 +75,8 @@ function __scene(director) {
 
 function __init()   {
 
+    CAAT.setCoordinateClamping(false);
+
     var director = new CAAT.Director().
             initialize(300,300).
             setClear(false);
