--- a/documentation/tutorials/t4-6.html
+++ b/documentation/tutorials/t4-6.html
@@ -56,7 +56,16 @@
             </p>
             <p>
                 To enable the resizing event listening, a call to director's
-                <span class="apicode">enableResizeEvents(resize_constant)</span>.
+                <span class="apicode">enableResizeEvents(resize_constant, onResizeCallback)</span>.
+            </p>
+            <p>
+                This method, will cause a director, and its contained scenes resize. But has no idea on how to make
+                your scene actors conform to the new size. The <span class="important">onResizeCallback</span> function
+                is comes handy for this purpose, since you have the opportunity to modify your actor's dimension,
+                position or desired attributes upon being called.
+            </p>
+            <p>
+                The callback function signature is as follow: <span class="apicode">function( director, newWidth, newHeight )</span>.
             </p>
         </div>
     </div>
