--- a/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_model_mouseevent.js.html
+++ b/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_model_mouseevent.js.html
@@ -560,7 +560,7 @@
 <span class='line'>553</span> </span><span class="WHIT">    </span><span class="PUNC">}</span><span class="WHIT">
 <span class='line'>554</span> </span><span class="PUNC">}</span><span class="WHIT">
 <span class='line'>555</span> 
-<span class='line'>556</span> </span><span class="NAME">CAAT.currentDirector</span><span class="PUNC">;</span><span class="WHIT">   </span><span class="COMM">// this variable always points to current director.</span><span class="WHIT">
+<span class='line'>556</span> </span><span class="NAME">CAAT.currentDirector</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="KEYW">null</span><span class="PUNC">;</span><span class="WHIT">   </span><span class="COMM">// this variable always points to current director.</span><span class="WHIT">
 <span class='line'>557</span> </span><span class="NAME">CAAT.getCurrentScene</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="KEYW">function</span><span class="PUNC">(</span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
 <span class='line'>558</span> </span><span class="WHIT">    </span><span class="KEYW">return</span><span class="WHIT"> </span><span class="NAME">CAAT.currentDirector.getCurrentScene</span><span class="PUNC">(</span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'>559</span> </span><span class="PUNC">}</span><span class="WHIT">
