--- a/documentation/demos/menu/menu.html
+++ b/documentation/demos/menu/menu.html
@@ -35,6 +35,7 @@
     <li><a href="../demo21/vvv.html">Tiles engine</a></li>
     <li><a href="../demo22/multitouch.html">Multitouch</a></li>
     <li><a href="../demo23/actionTo.html">Action To</a></li>
+    <li><a href="../demo24/path.html">Action To</a></li>
 </ul>
        
 <h1>Tutorial</h1>
