Added two more demos.

--- a/documentation/demos/index.html
+++ b/documentation/demos/index.html
@@ -11,7 +11,7 @@
 <body>
 <h1>Demos</h1>
 <ul>
-    <li><a href="demo1/path_org.html">Path management</a></li>
+    <li><a href="demo1/path_org.html">Path traversal</a></li>
     <li><a href="demo2/fishpond_org.html">Fish Pond</a></li>
     <li><a href="demo3/sprites_org.html">Sprites on Path</a></li>
     <li><a href="demo4/coordinates_org.html">Drag'n'Drop</a></li>
@@ -33,6 +33,8 @@
     <li><a href="demo20/flightcontrol.html">Flight Control</a></li>
     <li><a href="demo21/vvv.html">Tiles Engine</a></li>
     <li><a href="demo22/multitouch.html">Multitouch</a></li>
+    <li><a href="demo23/actionTo.html">Action To</a></li>
+    <li><a href="demo24/path.html">Path creation</a></li>
 
 </ul>
 
