--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
             <a href="documentation/demos/demo20/flightcontrol.html"><img class="image_h" src="thumbs/demo20.png" alt="Flightcontrol like demo"></a>
             <a href="documentation/demos/demo21/vvv.html"><img class="image_h" src="thumbs/demo21.png" alt="TileMap engine preview"></a>
             <a href="documentation/demos/demo22/multitouch.html"><img class="image_h" src="thumbs/demo22.png" alt="Multitouch test"></a>
+            <a href="documentation/demos/demo23/actionTo.html"><img class="image_h" src="thumbs/demo23.png" alt="Action To"></a>
+            <a href="documentation/demos/demo24/path.html"><img class="image_h" src="thumbs/demo24.png" alt="Path Creation"></a>
+
         </div>
 
         <p></p>
