--- a/documentation/demos/demo24/path.html
+++ b/documentation/demos/demo24/path.html
@@ -3,7 +3,7 @@
 <head>
     <script src="../../track.js" type="text/javascript"></script>
 
-    <title>CAAT example: Multitouch</title>
+    <title>CAAT example: Compund Path</title>
 
     <link rel="stylesheet" href="../style/demo.css">
 
