--- a/documentation/demos/demo1/path_org.html
+++ b/documentation/demos/demo1/path_org.html
@@ -312,6 +312,7 @@
                     setText("Conpound Path").
                     calcTextSize(director).
                     setTextFillStyle(gradient).
+                    setLineWidth( 1).
                     setOutline(true).
                     cacheAsBitmap();
             cc1.addChild(text.setLocation((cc1.width - text.textWidth) / 2, 0) );
