--- a/documentation/demos/demo12+1/transitions_org.html
+++ b/documentation/demos/demo12+1/transitions_org.html
@@ -198,7 +198,7 @@
             button.mouseClick= function(e) {
                 director.switchToNextScene(
                         2000,
-                        false,
+                        true,
                         true
                 )
             }
@@ -211,7 +211,7 @@
             button2.mouseClick= function(e) {
                 director.switchToPrevScene(
                         2000,
-                        false,
+                        true,
                         true
                 )
             }
