--- a/documentation/demos/demo25/dirtyrects.html
+++ b/documentation/demos/demo25/dirtyrects.html
@@ -131,6 +131,7 @@
                 var cc= c.getNumChildren();
                 if (cc) {
                     c.removeChildAt( (Math.random()*cc)>>0 );
+                    //c.getChildAt( (Math.random()*cc)>>0 ).setOutOfFrameTime();
                 }
             };
 
