--- a/documentation/demos/index.html
+++ b/documentation/demos/index.html
@@ -33,6 +33,9 @@
     <li><a href="demo20/flightcontrol.html">Flight Control</a></li>
     <li><a href="demo21/vvv.html">Tiles Engine</a></li>
     <li><a href="demo22/multitouch.html">Multitouch</a></li>
+    <li><a href="demo23/actionTo.html">Action To</a></li>
+    <li><a href="demo24/path.html">Path compositing</a></li>
+    <li><a href="demo25/flipcards.html">Flip cards</a></li>
 
 </ul>
 
