--- a/documentation/demos/menu/menu.html
+++ b/documentation/demos/menu/menu.html
@@ -35,7 +35,8 @@
     <li><a href="../demo21/vvv.html">Tiles engine</a></li>
     <li><a href="../demo22/multitouch.html">Multitouch</a></li>
     <li><a href="../demo23/actionTo.html">Action To</a></li>
-    <li><a href="../demo24/path.html">Action To</a></li>
+    <li><a href="../demo24/path.html">Path compositing</a></li>
+    <li><a href="../demo25/flipcards.html">Flip cards</a></li>
 </ul>
        
 <h1>Tutorial</h1>
